20200323 單一頁面修改css,  多頁式上傳畫面，待確認

--- a/mulit_page/sass/_variable.scss
+++ b/mulit_page/sass/_variable.scss
@@ -3,25 +3,27 @@
 
 //-------------------------------------------------------------顏色---------//
 // 定義顏色 此顏色可自由變換
-$primaryColor: #21baff; //主色
-$secondaryColor: #781f79; //輔色
-$lightColor: #fcc211; //點綴
-$linkColor: #21baff; //連結
+$sites:version01;
+$primaryColor: #601986; //主色
+$secondaryColor: #8f7eb8; //輔色
+$lightColor: #ff385c; //點綴
+$linkColor: #601986; //連結
 $importantColor: #ff3e4d; //重要
+$style: index($sites,version01) ; //選擇initial後 = $style:1
 // 但注意真實顏色與語意的關聯必須易於辨識
 $color-blue: #21baff;
 $color-green: #5cb85c;
-$color-orange: #f77810;
+$color-orange: #eb6100;
 $color-red: #ff3e4d;
 $color-yellow: #fcc211;
 $color-purple: #aa5ac5;
 $color-gray: #ccc;
 $color-dark: #333333;
 $color-hr: #666; //hr顏色
-$color-word: #222; //一般字的顏色
+$color-word: #000; //一般字的顏色
 // 連結顏色
-$aColor: #21baff;
-$aHover: lighten($aColor, 10);
+$aColor: $primaryColor;
+$aHover: $color-red;
 
 // 表單focus顏色
 $form-focus: #21baff; //表單
