--- a/mulit_page/sass/sass/_breadcrumb.scss
+++ b/mulit_page/sass/sass/_breadcrumb.scss
@@ -1,8 +1,16 @@
 .breadcrumb {
-    border-bottom: 1px solid #EEE;
-    padding: .1em 0em .1em;
-    font-size: .813em;
-    margin: 0px auto 5px;
+    padding: .1em 0em .1em .5em;
+    margin: 0px auto 15px;
+    position: relative;
+    &:before{
+        content: '';
+        width: 6px;
+        height: 13px;
+        background-color: nth($lightColor,$style);
+        position: absolute;
+        left:0;
+        top:6px;
+    }
     ul {
         @include li-reset;
         li {
@@ -18,6 +26,7 @@
                 margin-left: 0;
                 padding: 0;
             }
+
         }
     }
     a {
