--- a/mulit_page/sass/sass/_btn.scss
+++ b/mulit_page/sass/sass/_btn.scss
@@ -12,18 +12,18 @@ $btn-radius:.2em;
 // 按鈕的共用設定
 @mixin btn_setting($btn-bg:#f5f5f5, $btn-font-color:$btn-font-color) {
     background-color: $btn-bg;
-    border: 1px solid darken($btn-bg, 15);
+    border: 1px solid $btn-bg;
     color: $btn-font-color;
-    text-shadow:1px 1px 1px RGBA(0,0,0,.3);
+    // text-shadow:1px 1px 1px RGBA(0,0,0,.3);
     @include border-radius($btn-radius);
-    @include gradient(lighten($btn-bg, 5), darken($btn-bg, 15), vertical);
+    // @include gradient(lighten($btn-bg, 5), darken($btn-bg, 15), vertical);
     &:hover, &:focus {
         background-color: darken($btn-bg, 10); // Old browsers
         border: 1px solid darken($btn-bg, 20) !important;
         cursor: pointer;
         color: #FFF;
         outline:none;
-        @include gradient(lighten($btn-bg, 10), darken($btn-bg, 18), vertical);
+        // @include gradient(lighten($btn-bg, 10), darken($btn-bg, 18), vertical);
     }
     &.active {
         background: lighten($btn-bg, 5);
@@ -45,7 +45,8 @@ $btn-radius:.2em;
     padding: $btn-padding;
     min-width: 4em;
     margin: .25em .1em;
-    
+    background-color:#626262;
+    color:#fff;
     i {
         margin-right: .3em;
         margin-left: .3em;
@@ -55,11 +56,11 @@ $btn-radius:.2em;
 .btn {
     @extend %btn;
     @include box-sizing;
-    @include btn_setting;
+    // @include btn_setting;
     text-shadow:none;
     &:hover,
     &:focus {
-        color: $btn-font-color;
+        color: #fff;
         outline: none;
     }
 }
@@ -91,7 +92,7 @@ $btn-radius:.2em;
 }
 .btn-submit {
     @extend %btn;
-    @include btn_setting(lighten($primaryColor, 5), #FFF);
+    @include btn_setting(lighten($lightColor, 5), #FFF);
 }
 .btn-reset {
     @extend %btn;
@@ -99,6 +100,13 @@ $btn-radius:.2em;
 }
 .btn-primary {
     @extend .btn-orange;
+}
+.btn-gray{
+    @extend %btn;
+    @include btn_setting(#ddd, #333);
+    &:hover, &:focus{
+         color:#333;
+    }
 }
 // 按鈕大小
 .btn-xl {
