--- a/one_page/sass/sass/_table.scss
+++ b/one_page/sass/sass/_table.scss
@@ -172,7 +172,7 @@ table {
                 bottom: 0;
                 width: auto;
                 padding: .3em .5em .5em 0;
-                background-color: rgba(250, 250, 250, .9);
+                background-color: rgba(250, 250, 250, .9)!important;
                 white-space: nowrap;
                 text-align: left;
                 font-weight: bold;
