--- a/mulit_page/sass/page/_lp.scss
+++ b/mulit_page/sass/page/_lp.scss
@@ -84,3 +84,59 @@
         }
     }
 }
+.explanation {
+    margin-bottom: 30px;
+    line-height: 1.7em;
+}
+.member_login {
+    text-align: center;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: #eee;
+    display: none;
+    h3 {
+         position: relative;
+         display: inline-block;
+         &:before{
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 2px;
+            background-color:nth($primaryColor, $style);
+            left:-40px;
+            top:12px;
+
+         }
+         &:after{
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 2px;
+            background-color:nth($primaryColor, $style);
+            right:-40px;
+            top:12px;
+
+         }
+
+    }
+    .remind {
+        text-align: left;
+        color: #333 !important;
+        font-weight: 700;
+        font-size: 1.125em;
+        padding-left: 15px;
+        position: relative;
+        &:before {
+            content: '';
+            border: 8px solid nth($primaryColor, $style);
+            border-color: transparent transparent transparent nth($primaryColor, $style);
+            position: absolute;
+            left: 0;
+            top: 4px;
+        }
+    }
+    p {
+        text-align: left;
+    }
+}
