--- a/mulit_page/sass/page/_template.scss
+++ b/mulit_page/sass/page/_template.scss
@@ -1,10 +1,11 @@
 * {
     box-sizing: border-box;
 }
-html{
+html {
     scroll-behavior: smooth;
 }
 body {
+    background-color: $secondaryColor;
     &.noscroll {
         position: static !important;
         width: 100%;
@@ -27,9 +28,11 @@ body {
 }
 // 整體共用container樣式，請注意首頁切版頁面的整齊
 .container {
-    padding: 0;
+    padding: 0 30px;
     margin: 0 auto;
     max-width: $container-max; //請看_variable.scss
+    background-color: #fff;
+    @include box-sizing;
 }
 .main {
     position: relative;
@@ -37,10 +40,87 @@ body {
     padding: 0;
     // 可先設定一個中央區塊最大寬，限制accesskey對齊
     @include screen('mobile') {
-        padding-top: 55px;
+        padding-top: 60px;
     }
     h2 {
         line-height: 1.25em;
+    }
+    .accesskey {
+        color: nth($secondaryColor, $style);
+        @include screen('notebook') {
+            color: #fff;
+        }
+    }
+    h1 {
+        width:auto;
+        position: relative;
+        margin: 0px 0px 20px;
+        padding: 0;
+        font-size: 1.5em;
+        letter-spacing: .1em;
+        display: none;
+        @include box-sizing;
+        a {
+            display: block;
+            padding: 0 30px;
+            color: nth($primaryColor, $style);
+            font-family: 'Noto Serif TC', serif;
+            text-align: center;
+            line-height: 1.3em;
+            @include screen('xs_mobile'){
+                 padding: 0 20px;
+            }
+           
+            &.h1afixed {
+                position: fixed;
+                margin: 0;
+                padding: 10px;
+                @include box-sizing;
+                top: 60px;
+                z-index: 99;
+                width: 100%;
+                background: #fff;
+                box-shadow: 0px 2px 5px RGBA(0, 0, 0, .3);
+            }
+        }
+        img {
+            display: block;
+            width:100%;
+            margin:0 auto;
+            border-radius:0px;
+             margin-bottom: 10px;
+        }
+        @include screen('mobile') {
+            display: block;
+        }
+    }
+    .container {
+        padding: 0 100px 150px;
+        position: relative;
+        &:before {
+            content: '';
+            background-image: url('../images/bird_pic.png');
+            background-repeat: no-repeat;
+            background-position: top;
+            width: 142px;
+            height: 170px;
+            position: absolute;
+            bottom: -15px;
+            left: 160px;
+            z-index: 9;
+            @include screen('xs_mobile'){
+                 left: 100px;
+            }
+        }
+        @include screen('tablet') {
+            padding: 0 70px 150px;
+        }
+        @include screen('mobile') {
+            padding: 0 50px 150px;
+        }
+        @include screen('xs_mobile'){
+            padding: 0 30px 150px;
+        }
     }
 }
 ////////////////////////////////////////////////////////////
@@ -53,4 +133,16 @@ body {
     >.container {
         @include gutter(); //gutter 代表左右要留白
     }
+}
+.hidden {
+    display: none;
+}
+.word_green {
+    color: $secondaryColor;
+}
+.word_red {
+    color: $color-red;
+}
+.word_blue {
+    color: $color-blue;
 }
