--- a/mulit_page/sass/sass/_form.scss
+++ b/mulit_page/sass/sass/_form.scss
@@ -1,6 +1,4 @@
-
-$form_title_width :150px;       // 表單title寬度
-
+$form_title_width :20%; // 表單title寬度
 @mixin formStyle($f_color:$color-word, $f_border:$color-gray, $f_radius:$btn-radius) {
     color: $f_color;
     font-size: 1em;
@@ -17,13 +15,24 @@ $form_title_width :150px;       // 表單title寬度
 select::-ms-expand {
     display: none;
 }
-
+.formTb {
+    background-color: #eee;
+    padding: 10px 30px 40px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+     border: 1px solid #ccc;
+     @media(max-width: 480px){
+         padding: 10px 20px 40px;
+     }
+}
 .form_grid {
-    font-size: .938em;
-    margin: .5em;
-    border-top: 1px solid #DDD;
+    font-size: 1em;
+    margin: .5em 0;
+ h4 {
+    margin:30px 0 0 ;
+ }
     .form_grp {
-        border-bottom: 1px dashed #DDD;
+        border-bottom: #ddd 1px solid;;
         overflow: hidden;
         padding: .2em 0;
         // 閱讀條文
@@ -39,19 +48,30 @@ select::-ms-expand {
     .form_title {
         float: left;
         width: $form_title_width;
-        @include gutter();
-        padding-top: 5px;
-        @include screen('mobile') {
+        position: relative;
+        padding: 1em 1em .5em 1em;
+        font-weight: 600;
+        color:#333;
+        @include screen('xs_mobile') {
             width: 100%;
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            width: 5px;
+            height: 25px;
+            left: 0;
+            top: 15px;
+            background-color: nth($primaryColor, $style);
         }
     }
     .form_content {
         float: left;
-        padding-top: 3px;
+        padding: 1em 0 .5em;
         width: calc(100% - #{$form_title_width});
         @include gutter();
         overflow: hidden;
-        @include screen('mobile') {
+        @include screen('xs_mobile') {
             width: 100%;
         }
         // 第二層的設定
@@ -187,7 +207,7 @@ select::-ms-expand {
                 }
             }
             >input[type="text"] {
-                width:10em;
+                width: 10em;
                 padding-right: 2em;
                 @include screen('xs_mobile') {
                     width: 100%;
@@ -342,11 +362,11 @@ button,
 input[type="button"],
     {
     @extend %btn;
-    @include btn_setting($form-focus, #FFF);
+    @include btn_setting(#626262, #FFF);
 }
 input[type="submit"] {
     @extend %btn;
-    @include btn_setting($form-focus, #FFF);
+    @include btn_setting(nth($lightColor, $style), #FFF);
 }
 textarea {
     @include formStyle();
