--- a/mulit_page/sass/sass/_function.scss
+++ b/mulit_page/sass/sass/_function.scss
@@ -4,42 +4,54 @@ $function_color:#888;
 %function_before {
     vertical-align: middle;
     content: "";
-    width: 1.2em;
-    height: 1.2em;
-    margin-right: .2em;
+    width: 22px;
+    height: 18px;
+    margin-right: .6em;
     display: inline-block;
 }
 div.function {
     @include box-sizing;
     @extend %clearfix;
-    margin: .5em 0;
+    margin: 0em 0 1em;
+    text-align: right;
     ul {
         @include li-reset;
         li {
-            display: block;
-            float: left;
+            display: inline-block;
             margin: 0 3px 3px 0;
             button,
             a {
                 font-size: .813em;
                 display: block;
-                padding: .2em 1em;
-                background: $function_color;
-                border-color: $function_color;
+                padding: 8px 13px;
+                background: #000;
+                border-color: #000;
                 color: #FFF;
-                border-radius: 4px;
+                border-radius: 3px;
                 &:hover,
                 &:focus {
-                    background: darken($aHover, 0);
-                    border-color: darken($aHover, 0);
+                    background: nth($primaryColor, $style);
+                    border-color: nth($primaryColor, $style);
+                }
+                @include screen('xs_mobile') {
+                    font-size: 0;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    padding: 0;
                 }
             }
             // 回上一頁
             &.icon_back {
                 a:before {
                     @extend %function_before;
-                    background: url(../images/basic/icon_back.svg) no-repeat center center;
+                    background: url('../images/icon_back.png') no-repeat center center;
                     background-size: cover;
+                    @include screen('xs_mobile') {
+                        width: 40px;
+                        height: 40px;
+                        background-size: 20px;
+                    }
                 }
             }
             // 友善列印
@@ -72,7 +84,7 @@ div.function {
                 height: 60%;
                 top: 20%;
                 left: 20%;
-                background: url(../images/basic/icon_share.png) no-repeat center center  !important;
+                background: url(../images/basic/icon_share.png) no-repeat center center !important;
                 background-size: 24px !important;
             }
             text-indent:-9999px;
