--- a/mulit_page/sass/sass/_grid.scss
+++ b/mulit_page/sass/sass/_grid.scss
@@ -1,25 +1,25 @@
 /////////////////////////////////////////////////////////以下為demo範例///
 // 首頁區塊設定
 .demosection {
-    padding: 0em 0 3em;
-    text-align: center;
-    [class^="col"] {
-        border: 1px solid $color-blue;
-        background: lighten($color-blue, 30);
-        min-height: 200px;
-        color: lighten($color-word, 40);
-        text-align: center;
-        line-height: 200px;
-        font-size: 1.5em;
-        font-weight: bold;
-        @include box-sizing();
-    }
-    &+.demosection {
-        padding-top: 2em;
-    }
-    &+.bg {
-        background: lighten($primaryColor, 40);
-    }
+    // padding: 0em 0 3em;
+    // text-align: center;
+    // [class^="col"] {
+    //     border: 1px solid $color-blue;
+    //     background: lighten($color-blue, 30);
+    //     min-height: 200px;
+    //     color: lighten($color-word, 40);
+    //     text-align: center;
+    //     line-height: 200px;
+    //     font-size: 1.5em;
+    //     font-weight: bold;
+    //     @include box-sizing();
+    // }
+    // &+.demosection {
+    //     padding-top: 2em;
+    // }
+    // &+.bg {
+    //     background: lighten($primaryColor, 40);
+    // }
     &.full {
         .container {
             max-width: 100% !important;
