--- a/mulit_page/sass/sass/_menu.scss
+++ b/mulit_page/sass/sass/_menu.scss
@@ -1,13 +1,17 @@
 .menu {
     @include box-sizing;
-    margin: 0 auto;
+    margin: 20px auto;
     min-height: 2.5em;
     position: relative;
     z-index: 99;
     // 預設選單 ul
     clear: both;
+
+    @include screen('mobile') {
+        display: none;
+    }
     >ul {
-        text-align: left;
+        text-align: center;
         margin: 0;
         padding: 0;
         // 第一層選單樣式
@@ -15,38 +19,93 @@
             display: inline-block;
             vertical-align: top;
             min-width: 10em;
+            @include screen('tablet') {
+                min-width: 8em;
+            }
             >a {
                 display: block;
-                padding: 0 1em;
+                padding: 60px 0 0;
                 min-height: 2.5em;
-                font-weight: bold;
                 line-height: 2.5em;
                 color: $color-word;
+                position: relative;
+                text-align: center;
+                transition: .5s;
+                &:before {
+                    content: '';
+                    width: 60px;
+                    height: 60px;
+                    background-color: nth($primaryColor, $style);
+                    border-radius: 45px 43px 48px 50px;
+                    transform: rotate(10deg);
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    margin-left: -30px;
+                    z-index: 5;
+                }
+                &:after {
+                    content: '';
+                    width: 60px;
+                    height: 60px;
+                    background-image: url('../images/icon_01.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: 36px;
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    margin-left: -30px;
+                    z-index: 6;
+                }
+                &:hover, &:focus {
+                    transform: scale(1.2);
+                    color: nth($primaryColor, $style);
+                    box-shadow:none;
+                }
+                
             }
-            &.hasChild {
+            &:nth-child(2) {
                 >a {
+                    &:before {
+                        border-radius: 45px 43px 40px 50px;
+                        transform: rotate(-30deg);
+                    }
                     &:after {
-                        content: '';
-                        width: 4px;
-                        height: 4px;
-                        display: inline-block;
-                        margin-left: .5em;
-                        vertical-align: middle;
-                        border: 2px solid lighten($color-word, 40);
-                        transform: rotate(135deg);
-                        border-bottom: none;
-                        border-left: none;
-                        margin-bottom: .2em;
+                        background-image: url('../images/icon_02.svg');
                     }
                 }
             }
-            &:hover {
+            &:nth-child(3) {
                 >a {
-                    color: $aHover;
+                    &:before {
+                        border-radius: 45px 43px 40px 50px;
+                        transform: rotate(20deg);
+                    }
                     &:after {
-                        border: 2px solid $aHover;
-                        border-bottom: none;
-                        border-left: none;
+                        background-image: url('../images/icon_03.svg');
+                    }
+                }
+            }
+            &:nth-child(4) {
+                >a {
+                    &:before {
+                        border-radius: 42px 48px 45px 50px;
+                        transform: rotate(50deg);
+                    }
+                    &:after {
+                        background-image: url('../images/icon_04.svg');
+                    }
+                }
+            }
+            &:nth-child(5) {
+                >a {
+                    &:before {
+                        border-radius: 38px 40px 43px 42px;
+                        transform: rotate(45deg);
+                    }
+                    &:after {
+                        background-image: url('../images/icon_05.svg');
                     }
                 }
             }
@@ -179,6 +238,10 @@
             @include box-shadow(0px 0px 4px RGBA(0, 0, 0, .4));
             margin-bottom: 1em;
             background: #CCC;
+            margin: 0;
+            @include screen('mobile') {
+                display: block;
+            }
             a {
                 display: block;
                 color: #222;
@@ -186,6 +249,7 @@
                 transition: .4s ease-out;
             }
             ul {
+                text-align: left;
                 ul {
                     display: none;
                     width: 100%;
@@ -213,11 +277,38 @@
                     background: #FFF;
                 }
                 >a {
-                    padding: .5em 1em;
-                    min-height:2em;
+                    padding: .5em 1em .5em 4em;
+                    min-height: 2em;
                     line-height: 2em;
                     background: #FFF;
                     border-bottom: 1px solid #CCC;
+                    text-align: left;
+                    &:before {
+                        content: '';
+                        width: 50px;
+                        height: 100%;
+                        background-color: nth($secondaryColor, $style);
+                        border-radius: 0;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        margin-left: 0;
+                        z-index: 5;
+                        transform: rotate(0deg);
+                    }
+                    &:after {
+                        width: 50px;
+                        height: 100%;
+                        background-size: 25px;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        margin-left: 0;
+                        z-index: 6;
+                    }
+                    &:hover {
+                        transform: scale(1);
+                    }
                 }
                 &.hasChild {
                     >a {
@@ -244,9 +335,8 @@
                 }
                 li {
                     background: #FFF;
-
                     a {
-                        min-height:1.5em;
+                        min-height: 1.5em;
                         line-height: 1.5em;
                         padding: .5em 1em .5em 2em !important;
                         background: rgba(0, 0, 0, .05);
@@ -349,7 +439,7 @@
                 top: 0;
                 padding: 0;
                 border: none;
-                background:none;
+                background: none;
                 li {
                     width: 100% !important;
                     a {
