--- a/mulit_page/sass/sass/_table.scss
+++ b/mulit_page/sass/sass/_table.scss
@@ -1,28 +1,58 @@
 //http://lab.25sprout.com/responsive_table/
 table {
     width: 100%;
+    margin: 0 0 30px;
     border-collapse: collapse;
     @include screen('xs_mobile') {
         width: 100%;
     }
     th,
     td {
-        padding: .5em;
+        padding: 1em 1em;
         text-align: left;
     }
     td {
-        border: #ddd 1px solid;
+        border-bottom: #c9c9c9 1px solid;
         word-break: break-all;
+        background-color: rgba(250, 250, 250, .9);
+        color: #444;
         a {
             word-break: break-all;
         }
+        &.aCenter {
+            text-align: center;
+            @include screen('mobile') {
+                text-align: left;
+            }
+        }
+        &.aRight {
+            text-align: right;
+            @include screen('mobile') {
+                text-align: left;
+            }
+        }
     }
     th {
-        background-color: #F3F3F3;
-        color: #333;
-        border: #DDD 1px solid;
+        background-color: nth($primaryColor, $style);
+        color: #fff;
         text-align: center;
         white-space: nowrap;
+        position: relative;
+         font-weight: 600;
+        &:before {
+            content: '';
+            width: 1px;
+            height: 18px;
+            background-color: rgba(255, 255, 255, .5);
+            position: absolute;
+            left: 0;
+            top: 1.2em;
+        }
+        &:first-child {
+            &:before {
+                display: none;
+            }
+        }
     }
     &.table_hover {
         tr:hover {
@@ -36,7 +66,7 @@ table {
     }
 }
 .table_list {
-    @include screen('xs_mobile') {
+    @include screen('mobile') {
         background-color: transparent !important; //Force table to not be like tables anymore
         thead,
         tbody,
@@ -51,13 +81,13 @@ table {
             left: -9999px;
         }
         tr {
-            border: 1px solid #ccc;
+            border-top: 8px solid #c9c9c9;
             margin-bottom: 10px; // background-color: #333;
         }
         td {
             // Behave  like a "row"
             border: none !important;
-            border-bottom: 1px solid #eee !important;
+            border-bottom: 1px solid #c9c9c9 !important;
             position: relative;
             padding-left: 35% !important;
             white-space: normal;
@@ -65,14 +95,46 @@ table {
             &:before {
                 content: attr(data-title);
                 position: absolute;
-                top: .5em;
-                left: .5em;
+                top: 0;
+                left: 0;
+                bottom: 0;
                 width: 30%;
-                padding-right: 10px;
+                padding: .8em 1em;
+                background-color: nth($primaryColor, $style);
+                white-space: nowrap;
+                text-align: center;
+                font-weight: bold;
+                color: #fff;
+                @include box-sizing;
+            }
+        }
+    }
+    @media(max-width: 480px) {
+        table {}
+        tr {
+            border: #c9c9c9 1px solid;
+            border-bottom: none;
+            margin-bottom: 25px; // background-color: #333;
+        }
+        td {
+            padding-left: .8em !important;
+            &:before {
+                content: attr(data-title);
+                position: relative;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                width: auto;
+                padding: .3em .5em .5em 0;
+                background-color: rgba(250, 250, 250, .9) !important;
                 white-space: nowrap;
                 text-align: left;
                 font-weight: bold;
-                color: #000;
+                display: block;
+                font-size: 1.125em;
+                font-weight: 700;
+                color: nth($primaryColor, $style);
+                @include box-sizing;
             }
         }
     }
@@ -150,8 +212,8 @@ table {
         }
     }
 }
-.scroltable{
-    min-width:600px !important;
+.scroltable {
+    min-width: 600px !important;
 }
 .scroltable-wrapper {
     position: relative;
@@ -172,7 +234,7 @@ table {
 }
 .scroltable-nav.scroltable-nav-left {
     left: 0;
-    @include gradient(rgba(255,255,255,1),rgba(255,255,255,0),horizontal);
+    @include gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0), horizontal);
     .tablearrow_left {
         position: fixed;
         left: 0em;
@@ -197,7 +259,7 @@ table {
 }
 .scroltable-nav.scroltable-nav-right {
     right: 0;
-    @include gradient(rgba(255,255,255,0),rgba(255,255,255,1),horizontal);
+    @include gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1), horizontal);
     .tablearrow_right {
         position: fixed;
         top: 0em;
@@ -233,5 +295,128 @@ table {
     }
     to {
         right: .3em;
+    }
+}
+// 固定左邊th
+.scrollX {
+    position: relative;
+    .navCtrl {
+        position: absolute;
+        top: 40%;
+        z-index: 9; // 左右箭頭
+        ;
+        background-color: rgba(0, 0, 0, .2) !important;
+        border: none !important;
+        width: 44px;
+        height: 44px;
+        line-height: 36px;
+        border-radius: 50%;
+        min-width: 0;
+        padding: 0;
+        &:hover {
+            background-color: rgba(0, 0, 0, .8);
+            box-shadow: none;
+        }
+        &.toLeft {
+            left: 0;
+        }
+        &.toRight {
+            right: 0;
+        }
+        &:before {
+            content: "";
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border: 3px solid #fff;
+            border-left: none;
+            border-bottom: none;
+            transform: rotate(45deg);
+            margin: 11px auto auto -4px;
+        }
+        &.toLeft:before {
+            transform: rotate(225deg);
+            margin-left: 4px;
+        }
+    }
+}
+.table_list_thleft, .table_list_fixed_thleft {
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    table {
+        border: #c9c9c9 1px solid;
+        margin-bottom: 10px;
+        th {
+            width: 100px;
+            border: #c9c9c9 1px solid;
+            background-color: #fff;
+        }
+        td {
+            border: #c9c9c9 1px solid;
+            width: 160px;
+            word-break: break-word;
+        }
+        tbody {
+            border-right: none;
+            border-left: none;
+        }
+    }
+}
+.table_list_fixed_thleft {
+    position: absolute;
+    width: 100px;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    table {
+        th {
+            background-color: nth($primaryColor, $style);
+            color: #fff;
+        }
+    }
+}
+// 活動
+.activity_Tb {
+    border: 1px solid #ccc;
+     background-color: #eee;
+    padding: 10px 30px 20px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+    @include box-sizing;
+    table {
+        margin: 0;
+        th {
+            background-color: #eee;
+            color:#333;
+            position: relative;
+            background-color: transparent;
+            border-bottom: #ddd 1px solid;
+            text-align: left;
+            vertical-align: top;
+            width: 20%;
+            // border-left:5px solid nth($primaryColor, $style);
+            &:after {
+                content: '';
+                position: absolute;
+                width: 5px;
+                height: 25px;
+                left: 0;
+                top: 15px;
+                background-color: nth($primaryColor, $style);
+            }
+        }
+        td {
+            border-bottom: #ddd 1px solid;
+             background-color: transparent;
+        }
+    }
+   @media(max-width: 480px) {
+        background-color: #eee;
+        padding: 10px 20px 20px;
+        th, td {
+            display: block;
+              width: 100%!important;
+        }
     }
 }
