--- a/mulit_page/sass/page/_lp.scss
+++ b/mulit_page/sass/page/_lp.scss
@@ -102,10 +102,11 @@
             content: '';
             position: absolute;
             width: 20px;
-            height: 2px;
+            height: 2px!important;
             background-color:nth($primaryColor, $style);
-            left:-40px;
+            left:-20px;
             top:12px;
+             border:none;
 
          }
          &:after{
@@ -116,6 +117,7 @@
             background-color:nth($primaryColor, $style);
             right:-40px;
             top:12px;
+
 
          }
 
