20200324 上傳選單垂直頁面

--- a/mulit_page/sass/page/_cp.scss
+++ b/mulit_page/sass/page/_cp.scss
@@ -115,10 +115,10 @@ h1.title, h2.title {
             }
         }
     }
-    ul{
-        list-style-type: none;
-        margin: 0;
-    }
+    // ul{
+    //     list-style-type: none;
+    //     margin: 0;
+    // }
 
     p.blockclear {
         float: none;
