--- a/mulit_page/sass/page/_template.scss
+++ b/mulit_page/sass/page/_template.scss
@@ -25,6 +25,29 @@ body {
         overflow: hidden;
         overflow-y: auto;
     }
+    &.menu_vertical {
+        position: relative;
+        .header {
+            .container {
+                padding: 0 30px 0 160px;
+                @include screen('mobile') {
+                    padding: 0 30px;
+                }
+            }
+        }
+        .main {
+            .container {
+
+                padding: 0 30px 150px 160px;
+                @include screen('mobile') {
+                    padding: 0 30px 150px;
+                }
+                // @include screen('xs_mobile') {
+                //     padding: 0 30px 150px;
+                // }
+            }
+        }
+    }
 }
 // 整體共用container樣式，請注意首頁切版頁面的整齊
 .container {
@@ -45,14 +68,14 @@ body {
     h2 {
         line-height: 1.25em;
     }
-    .accesskey {
-        color: nth($secondaryColor, $style);
-        @include screen('notebook') {
-            color: #fff;
-        }
-    }
+    // .accesskey {
+    //     color: nth($secondaryColor, $style);
+    //     @media(max-width: 1200){
+    //         color: #fff!important;
+    //     }
+    // }
     h1 {
-        width:auto;
+        width: auto;
         position: relative;
         margin: 0px 0px 20px;
         padding: 0;
@@ -67,10 +90,9 @@ body {
             font-family: 'Noto Serif TC', serif;
             text-align: center;
             line-height: 1.3em;
-            @include screen('xs_mobile'){
-                 padding: 0 20px;
+            @include screen('xs_mobile') {
+                padding: 0 20px;
             }
-           
             &.h1afixed {
                 position: fixed;
                 margin: 0;
@@ -85,10 +107,10 @@ body {
         }
         img {
             display: block;
-            width:100%;
-            margin:0 auto;
-            border-radius:0px;
-             margin-bottom: 10px;
+            width: 100%;
+            margin: 0 auto;
+            border-radius: 0px;
+            margin-bottom: 10px;
         }
         @include screen('mobile') {
             display: block;
@@ -108,8 +130,8 @@ body {
             bottom: -15px;
             left: 160px;
             z-index: 9;
-            @include screen('xs_mobile'){
-                 left: 100px;
+            @include screen('xs_mobile') {
+                left: 100px;
             }
         }
         @include screen('tablet') {
@@ -118,7 +140,7 @@ body {
         @include screen('mobile') {
             padding: 0 50px 150px;
         }
-        @include screen('xs_mobile'){
+        @include screen('xs_mobile') {
             padding: 0 30px 150px;
         }
     }
