--- a/mulit_page/sass/sass/_footer.scss
+++ b/mulit_page/sass/sass/_footer.scss
@@ -78,7 +78,7 @@ footer {
                 @include transition(all, .3s, ease-out);
                 &:hover,
                 &:focus {
-                    background: darken($primaryColor, 10);
+                    background: darken(nth($primaryColor,$style), 10);
                 }
             }
         }
