--- a/mulit_page/sass/sass/_table.scss
+++ b/mulit_page/sass/sass/_table.scss
@@ -390,7 +390,7 @@ table {
             background-color: #eee;
             color:#333;
             position: relative;
-            background-color: transparent;
+            background-color: transparent!important;
             border-bottom: #ddd 1px solid;
             text-align: left;
             vertical-align: top;
