--- a/mulit_page/sass/page/_template.scss
+++ b/mulit_page/sass/page/_template.scss
@@ -45,6 +45,7 @@ body {
     width: 100%;
     margin: 0px auto;
     background-color:nth($secondaryColor,$style);
+    position: relative;
     @include screen('mobile') {
         background: #FFF;
         overflow: hidden;
