--- a/mulit_page/sass/sass/_header.scss
+++ b/mulit_page/sass/sass/_header.scss
@@ -7,7 +7,7 @@
         position: fixed;
         width: 100%;
         height: 60px;
-        background-color: nth($primaryColor,$style);
+        background-color: nth($primaryColor, $style);
     }
     // 虛擬底色 - navigation bg
     // &:before {
@@ -336,17 +336,35 @@
         }
     }
 }
-// header fix
-.header.fixed {
-    position: fixed;
-    width: 100%;
-    right: 0;
-    top: -1px;
-    box-shadow: rgba(0, 0, 0, .5) 0 0 25px;
-    background-color:#FFF;
-    z-index: 999;
-    @include screen('mobile') {
-        background: #FFF;
+.header .menu {
+    &.menufixed {
+        position: fixed;
+        margin: 0;
+        padding: 10px;
+        @include box-sizing;
+        top: 0;
+        right:0;
+        left:0;
+        z-index: 99;
+        width: 100%;
+        background-color:#fff;
+        box-shadow: 0px 2px 5px RGBA(0, 0, 0, .3);
     }
-    
 }
+// header fix
+// .header.fixed {
+//     position: fixed;
+//     width: 100%;
+//     right: 0;
+//     top: -1px;
+//     box-shadow: rgba(0, 0, 0, .5) 0 0 25px;
+//     background-color:#FFF;
+//     z-index: 999; 
+//     // height: 461px;      
+//     @include screen('mobile') {
+//         background: #FFF;
+//     }
+//     h1{
+//         display: none;  
+//     }
+// }
