20200330 修改報名資料確認.htm的html及調整hyui.js、hyui.css

--- a/mulit_page/sass/sass/_btn.scss
+++ b/mulit_page/sass/sass/_btn.scss
@@ -4,7 +4,7 @@ $btn-border:darken($color-word, 5);
 $btn-padding:.5em 1.5em;
 $btn-radius:.2em;
 // 按鈕外框
-.btn_grp {
+.btn_grp, .btn_cente {
     text-align: center;
     padding: 1em 0;
 }
