--- a/mulit_page/sass/sass/_table.scss
+++ b/mulit_page/sass/sass/_table.scss
@@ -377,7 +377,7 @@ table {
     }
 }
 // 活動
-.activity_Tb {
+.activity_Tb, .memberTb {
     border: 1px solid #ccc;
      background-color: #eee;
     padding: 10px 30px 20px;
